/**
 * Snapshot / Contract Tests
 *
 * These tests verify the stability of external interfaces and output formats.
 * They should fail when output structure changes, forcing explicit approval
 * via `jest --updateSnapshot`.
 */

import { showHelp, showVersion } from './index';
import { ANALYSIS_PROMPT_V1, GENERATION_PROMPT_V1, formatPrompt, formatGenerationPrompt } from './llm/prompts';
import { validateConfig, type AnalysisConfig } from './config';
import { generateADRFilename, titleToSlug, saveADR } from './adr/adr';
import * as fs from 'fs';
import * as path from 'path';

// ---------------------------------------------------------------------------
// 1. CLI help output snapshot
// ---------------------------------------------------------------------------
describe('CLI interface snapshots', () => {
  let stdoutSpy: jest.SpyInstance;

  beforeEach(() => {
    stdoutSpy = jest.spyOn(process.stdout, 'write').mockImplementation();
  });

  afterEach(() => {
    stdoutSpy.mockRestore();
  });

  test('help output matches snapshot', () => {
    showHelp();
    const helpText = stdoutSpy.mock.calls[0][0] as string;
    expect(helpText).toMatchSnapshot();
  });

  test('version output matches snapshot', () => {
    showVersion();
    const versionText = stdoutSpy.mock.calls[0][0] as string;
    expect(versionText).toMatchSnapshot();
  });
});

// ---------------------------------------------------------------------------
// 2. ADR template / prompt structure snapshots
//
//    The actual ADR content is generated by an LLM so we cannot snapshot it
//    directly. Instead we snapshot the prompt templates that define the
//    contract between cADR and the LLM, and the formatted prompts produced
//    with known inputs.
// ---------------------------------------------------------------------------
describe('LLM prompt template snapshots', () => {
  test('ANALYSIS_PROMPT_V1 matches snapshot', () => {
    expect(ANALYSIS_PROMPT_V1).toMatchSnapshot();
  });

  test('GENERATION_PROMPT_V1 matches snapshot', () => {
    expect(GENERATION_PROMPT_V1).toMatchSnapshot();
  });

  test('formatted analysis prompt with known input matches snapshot', () => {
    const formatted = formatPrompt(ANALYSIS_PROMPT_V1, {
      file_paths: ['src/auth/login.ts', 'src/auth/oauth.ts'],
      diff_content: '--- a/src/auth/login.ts\n+++ b/src/auth/login.ts\n@@ -1,3 +1,5 @@\n+import { OAuth2Client } from "google-auth-library";\n',
    });
    expect(formatted).toMatchSnapshot();
  });

  test('formatted generation prompt with known input matches snapshot', () => {
    // Pin the date so the snapshot is deterministic
    const realDate = Date;
    const mockDate = new Date('2025-06-15T00:00:00Z');
    jest.spyOn(global, 'Date').mockImplementation(() => mockDate as unknown as Date);

    const formatted = formatGenerationPrompt({
      file_paths: ['src/auth/login.ts', 'src/auth/oauth.ts'],
      diff_content: '--- a/src/auth/login.ts\n+++ b/src/auth/login.ts\n@@ -1,3 +1,5 @@\n+import { OAuth2Client } from "google-auth-library";\n',
    });
    expect(formatted).toMatchSnapshot();

    jest.restoreAllMocks();
  });
});

// ---------------------------------------------------------------------------
// 3. ADR filename generation contract
// ---------------------------------------------------------------------------
describe('ADR filename generation snapshots', () => {
  test('generateADRFilename output matches snapshot for typical inputs', () => {
    const cases = [
      { number: 1, title: 'Use PostgreSQL for Storage' },
      { number: 42, title: 'Adopt React 18' },
      { number: 100, title: 'Replace REST with gRPC' },
      { number: 5, title: 'Switch to OAuth 2.0!' },
      { number: 9999, title: 'Final Decision' },
    ];

    const results = cases.map(({ number, title }) => ({
      input: { number, title },
      output: generateADRFilename(number, title),
    }));

    expect(results).toMatchSnapshot();
  });

  test('titleToSlug output matches snapshot for edge cases', () => {
    const inputs = [
      'Simple Title',
      'API v2.0: New Endpoints!',
      '---Leading Hyphens---',
      'Multiple   Spaces   Here',
      '',
      '!!!',
      'CamelCase And snake_case Mixed',
    ];

    const results = inputs.map((input) => ({
      input,
      output: titleToSlug(input),
    }));

    expect(results).toMatchSnapshot();
  });
});

// ---------------------------------------------------------------------------
// 4. Config schema / validation contract snapshots
// ---------------------------------------------------------------------------
describe('Config validation contract snapshots', () => {
  test('valid config passes validation with expected result shape', () => {
    const validConfig: AnalysisConfig = {
      provider: 'openai',
      analysis_model: 'gpt-4',
      api_key_env: 'OPENAI_API_KEY',
      timeout_seconds: 15,
    };

    const result = validateConfig(validConfig);
    expect(result).toMatchSnapshot();
  });

  test('valid config with optional fields passes validation', () => {
    const validConfig: AnalysisConfig = {
      provider: 'gemini',
      analysis_model: 'gemini-1.5-pro',
      api_key_env: 'GEMINI_API_KEY',
      timeout_seconds: 30,
      ignore_patterns: ['*.md', 'package-lock.json'],
    };

    const result = validateConfig(validConfig);
    expect(result).toMatchSnapshot();
  });

  test('validation errors for invalid provider match snapshot', () => {
    const invalidConfig = {
      provider: 'invalid-provider',
      analysis_model: 'gpt-4',
      api_key_env: 'OPENAI_API_KEY',
      timeout_seconds: 15,
    };

    const result = validateConfig(invalidConfig);
    expect(result).toMatchSnapshot();
  });

  test('validation errors for missing required fields match snapshot', () => {
    const result = validateConfig({});
    expect(result).toMatchSnapshot();
  });

  test('validation errors for out-of-range timeout match snapshot', () => {
    const result = validateConfig({
      provider: 'openai',
      analysis_model: 'gpt-4',
      api_key_env: 'OPENAI_API_KEY',
      timeout_seconds: 999,
    });
    expect(result).toMatchSnapshot();
  });

  test('AnalysisConfig interface shape matches snapshot', () => {
    // Snapshot the keys of a full config object to catch interface changes
    const fullConfig: AnalysisConfig = {
      provider: 'openai',
      analysis_model: 'gpt-4',
      api_key_env: 'OPENAI_API_KEY',
      timeout_seconds: 15,
      ignore_patterns: [],
    };

    const keys = Object.keys(fullConfig).sort();
    expect(keys).toMatchSnapshot();
  });
});

// ---------------------------------------------------------------------------
// 5. saveADR return shape contract
// ---------------------------------------------------------------------------
describe('saveADR return shape snapshots', () => {
  const testDir = path.join(__dirname, '../test-adrs-snapshot');

  beforeEach(() => {
    if (fs.existsSync(testDir)) {
      fs.rmSync(testDir, { recursive: true, force: true });
    }
  });

  afterEach(() => {
    if (fs.existsSync(testDir)) {
      fs.rmSync(testDir, { recursive: true, force: true });
    }
  });

  test('successful save result shape matches snapshot', () => {
    const result = saveADR('# Test ADR\n\nContent', 'Test ADR', testDir);

    // Snapshot the shape (keys and types) rather than exact values,
    // since filePath contains an absolute path that varies per machine.
    const shape = {
      keys: Object.keys(result).sort(),
      success: result.success,
      hasFilePath: typeof result.filePath === 'string',
      hasError: result.error !== undefined,
    };

    expect(shape).toMatchSnapshot();
  });

  test('failed save result shape matches snapshot', () => {
    // Create a read-only directory to force a write error
    if (process.platform === 'win32') {
      // Skip on Windows - permission handling differs
      return;
    }

    fs.mkdirSync(testDir, { recursive: true });
    fs.chmodSync(testDir, 0o444);

    const result = saveADR('# Test\n\nContent', 'Test', testDir);

    const shape = {
      keys: Object.keys(result).sort(),
      success: result.success,
      hasFilePath: result.filePath !== undefined,
      hasError: typeof result.error === 'string',
    };

    expect(shape).toMatchSnapshot();

    fs.chmodSync(testDir, 0o755);
  });
});
